# Api_app_Stocks

./: .env.example  .gitignore  Dockerfile.airflow  Makefile  README.md  airflow.cfg  app_stocks  docker-compose.yml  main.py  pyproject.toml  stock_prices_history.csv
.github/workflows/: test.yml
aap_stocks.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
app/: constants.py  stock_prices_history.csv
app/src/: get_data.py  redshift_loader.py
app/src/app.egg-info/: SOURCES.txt
dags/: stocks_redshift_daily_dag.py
data/staging/: stock_prices_history.parquet
src/: get_data.py
src/aap_stocks.egg-info/: SOURCES.txt  requires.txt  top_level.txt
tests/: test_get_data.py  test_get_stock_data.py
