[project]
name = "aap-stocks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.11",
    "pyarrow>=22.0.0",
    "pytest>=9.0.1",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.44",
    "yfinance>=0.2.66",
]
